<resources>
    <string name="app_name">Gezgin</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="password">Şifre</string>
    <string name="login">Giriş Yap</string>
    <string name="register">Kayıt Ol</string>
    <string name="password_verify">Şifre Tekrar</string>
    <string name="home">Anasayfa</string>
    <string name="profile">Profil</string>
    <string name="logout">Çıkış Yap</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="notes">Notlarım</string>
    <string name="create_note">Not Oluştur</string>
    <string name="your_note">Notunuz</string>
    <string name="save">Kaydet</string>
    <string name="create_visited_place">Yeni Gezdiğim Yer</string>
    <string name="visited_city">Gittiğiniz Şehir</string>
</resources>
