<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:contentInsetStart="0dp"
            app:contentInsetEnd="0dp"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/create_visited_place_activity_btnBack"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="8dp"
                    android:src="@drawable/ic_left_arrow"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="8dp"/>

                <TextView
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/create_visited_place"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:padding="16dp"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/create_visited_place_activity_imgPlace"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <EditText
            android:id="@+id/create_visited_place_activity_editCityName"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:hint="@string/visited_city"
            android:textSize="16sp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:background="@drawable/custom_bg_edittext2"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorBlack"
            android:imeOptions="actionNext"
            android:inputType="text"/>

        <EditText
            android:id="@+id/create_visited_place_activity_editCityNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="42dp"
            android:lines="8"
            android:background="@drawable/custom_bg_edittext2"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:gravity="start"
            android:hint="@string/your_note"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"/>

        <Button
            android:id="@+id/create_note_activity_btnSave"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:text="@string/save"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_bg_button"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>